@@ -17,8 +17,19 @@ class FailedTransaction :
 class RetryQueue:
     def __init__(self, database_server, broker):
         self.queue: deque[FailedTransaction] = deque()
+        self.initialise_retry_queue()
         self.database_server = database_server
         self.event_broker = broker
+    
+    def initialise_retry_queue(self):
+        try:
+            with open("databases/retry_queue.json") as file:
+                txns = json.load(file)
+        except Exception as e:
+            logger.critical(f"Error initialising retry queue: {e}")
+        else:
+            for txn in txns:
+                self.enqueue(txn["id"], txn["webhook"])
     
     def enqueue(self, transaction_id, webhook):
         txn = FailedTransaction(transaction_id, webhook)
@@ -55,10 +66,25 @@ class RetryQueue:
                 else:
                     logger.warning("All attempts updating the client failed")
                 logger.warning(e)
+    
+    def handle_shutdown(self):
+        if self.queue:
+            queue = []
+            for txn in self.queue:
+                queue.append({"id": txn.id, "webhook":txn.webhook})
+            
+            try:
+                with open("databases/retry_queue.json") as file:
+                    json.dump(queue, file, indent=4)
+            except Exception as e:
+                logger.critical(f"Error flushing retry events to database: {e}")
+            else:
+                logger.info("Failed txns flushed to database")
+        else:
+            logger.info("Retry queue is empty. No data is flushed")
 
-
-    def run(self):
-        while True:
+    def run(self, shutdown_event):
+        while not shutdown_event.is_set():
             for _ in range(len(self.queue)):
                 txn = self.queue.popleft()
                 transaction_id = txn.id
@@ -70,3 +96,6 @@ class RetryQueue:
                 else:
                     self.enqueue(transaction_id, webhook)
                 time.sleep(5)
+        self.handle_shutdown()
+        
+        
